src/index.css
:root {
  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
}

body {
  font-family: "Karla", sans-serif;
  margin: 0;
}

.navbar {
  font-family: Karla;
  display: flex;
  justify-items: center;
  align-items: center;
  padding: 5px;
  background: linear-gradient(to right, #672280, #A626D3);
  justify-content: center;
  color: #FFFFFF;
}

.logo {
  width: 60px;
  height: 50px;
  margin: 5px;
}

.logo-text {
  font-size: 1.6rem;
}

.form {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 17px;
  margin: 17px;
}

.form-input {
  border-radius: 5px;
  border: 1px solid #D5D4D8;
  text-indent: 5px;
  height: 40px;
}

.upload-container {
  display: flex;
}

.upload-btn {
  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
  color: white;
  padding: 10px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  margin-right: 10px;
}

.upload-btn:hover {
  background-color: #ffffff;
}

.upload-btn:focus {
  outline: none;
}

.upload-input {
  display: none;
}

.form-button {
  border-radius: 5px;
  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
  color: white;
  border: none;
  cursor: pointer;
  height: 40px;
  width: auto;
  font-size: 1rem;
}

.meme {
  
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-height: 90dvh;
}

.meme-image {
  user-select: none; /* Prevent the image from being highlighted */
  pointer-events: none; /* Make the image non-draggable */
  border-radius: 3px;
  max-height: 80dvh;
  width: max-content;
  margin: 17px;
}

.meme-text {
  position: absolute;
  width: 100%;
  text-align: center;
  margin: 15px 0;
  padding: 0 5px;
  font-family: impact, sans-serif;
  font-size: 2em;
  text-transform: uppercase;
  color: white;
  letter-spacing: 1px;
  text-shadow:
      2px 2px 0 #000,
      -2px -2px 0 #000,
      2px -2px 0 #000,
      -2px 2px 0 #000,
      0 2px 0 #000,
      2px 0 0 #000,
      0 -2px 0 #000,
      -2px 0 0 #000,
      2px 2px 5px #000;
  cursor: move;
}

.top {
  top: 20px; /* Adjust the initial top position as needed */
  left: 50%; /* Align to the center horizontally */
  transform: translateX(-50%); /* Center horizontally */
}

.bottom {
  bottom: 20px; /* Adjust the initial bottom position as needed */
  left: 50%; /* Align to the center horizontally */
  transform: translateX(-50%); /* Center horizontally */
}

@media only screen and (max-width: 767px) {
  .form {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 17px;
    margin: 17px;
  }
  
  .form-input {
    border-radius: 5px;
    border: 1px solid #D5D4D8;
    text-indent: 5px;
  }
  
  .form-button {
    border-radius: 5px;
    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
    color: white;
    border: none;
    cursor: pointer;
    height: 40px;
    width: auto;
  }

  .upload-container {
    display: flex;
  }
  
  .upload-btn {
    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
    color: white;
    margin-right: 0px;
  }
  
  
  .meme {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    max-height: 90dvh;
  }
  
  .meme-image {
    max-width: 100%;
    border-radius: 3px;
    max-height: 50dvh;
    width: 90dvw;
    margin: 17px;
  }
  
  .meme-text {
    position: absolute;
    width: 80%;
    text-align: center;
    margin: 15px 0;
    padding: 0 5px;
    font-family: impact, sans-serif;
    font-size: 2em;
    text-transform: uppercase;
    color: white;
    letter-spacing: 1px;
    text-shadow:
        2px 2px 0 #000,
        -2px -2px 0 #000,
        2px -2px 0 #000,
        -2px 2px 0 #000,
        0 2px 0 #000,
        2px 0 0 #000,
        0 -2px 0 #000,
        -2px 0 0 #000,
        2px 2px 5px #000;
    cursor: move;
  }
}

